[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background_shop.png" type="Texture" id=1]
[ext_resource path="res://assets/shop_item_1.png" type="Texture" id=2]
[ext_resource path="res://assets/shop_item_4.png" type="Texture" id=3]
[ext_resource path="res://assets/shop_item_3.png" type="Texture" id=4]
[ext_resource path="res://assets/shop_item_2.png" type="Texture" id=5]
[ext_resource path="res://levels/ItemsPrizeMenu.gd" type="Script" id=6]
[ext_resource path="res://levels/ItemsIconMenu.gd" type="Script" id=7]

[node name="shop" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 629.0
margin_right = 1020.0
margin_bottom = 600.0

[node name="ItemsIconMenu" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 108.0
margin_bottom = 600.0
script = ExtResource( 7 )

[node name="Item1Button" type="Button" parent="HBoxContainer/ItemsIconMenu"]
margin_right = 108.0
margin_bottom = 102.0
icon = ExtResource( 2 )
flat = true

[node name="Item2Button" type="Button" parent="HBoxContainer/ItemsIconMenu"]
margin_top = 106.0
margin_right = 108.0
margin_bottom = 208.0
icon = ExtResource( 5 )
flat = true

[node name="Item3Button" type="Button" parent="HBoxContainer/ItemsIconMenu"]
margin_top = 212.0
margin_right = 108.0
margin_bottom = 314.0
icon = ExtResource( 4 )
flat = true

[node name="Item4Button" type="Button" parent="HBoxContainer/ItemsIconMenu"]
margin_top = 318.0
margin_right = 108.0
margin_bottom = 420.0
icon = ExtResource( 3 )
flat = true

[node name="ItemsPrizeMenu" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 112.0
margin_right = 188.0
margin_bottom = 600.0
script = ExtResource( 6 )

[node name="Item1Prize" type="Label" parent="HBoxContainer/ItemsPrizeMenu"]
margin_right = 76.0
margin_bottom = 14.0
text = "prize: 100"
uppercase = true

[node name="Item2Prize" type="Label" parent="HBoxContainer/ItemsPrizeMenu"]
margin_top = 18.0
margin_right = 76.0
margin_bottom = 32.0
text = "prize: 200"
uppercase = true

[node name="Item3Prize" type="Label" parent="HBoxContainer/ItemsPrizeMenu"]
margin_top = 36.0
margin_right = 76.0
margin_bottom = 50.0
text = "prize: 500"
uppercase = true

[node name="Item4Prize" type="Label" parent="HBoxContainer/ItemsPrizeMenu"]
margin_top = 54.0
margin_right = 76.0
margin_bottom = 85.0
text = "prize: 1000
"
uppercase = true

[node name="BackButton" type="Button" parent="."]
margin_left = 827.0
margin_top = 529.0
margin_right = 1016.0
margin_bottom = 590.0
text = "back"

[node name="Money" type="Label" parent="."]
margin_right = 164.0
margin_bottom = 62.0
uppercase = true

[connection signal="pressed" from="HBoxContainer/ItemsIconMenu/Item1Button" to="HBoxContainer/ItemsIconMenu" method="_on_Item1Button_pressed"]
[connection signal="pressed" from="HBoxContainer/ItemsIconMenu/Item2Button" to="HBoxContainer/ItemsIconMenu" method="_on_Item2Button_pressed"]
[connection signal="pressed" from="HBoxContainer/ItemsIconMenu/Item3Button" to="HBoxContainer/ItemsIconMenu" method="_on_Item3Button_pressed"]
[connection signal="pressed" from="HBoxContainer/ItemsIconMenu/Item4Button" to="HBoxContainer/ItemsIconMenu" method="_on_Item4Button_pressed"]
[connection signal="pressed" from="BackButton" to="HBoxContainer/ItemsIconMenu" method="_on_BackButton_pressed"]
